# phutball-rust

./: .gitignore  Cargo.toml  GOAL.md  README.md  RESEARCH.md  run_nnue_v2.sh
.github/workflows/: pages.yml
phutball-core/: Cargo.toml
phutball-core/src/: lib.rs
phutball-wasm/: Cargo.toml
phutball-wasm/src/: lib.rs
src/: main.rs
