[workspace]
members = ["phutball-wasm", "phutball-core"]

[package]
name = "phutball-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
burn = { version = "0.16", features = ["ndarray"] }  # CPU backend (Phase 2 training)
phutball-core = { path = "phutball-core" }
